# project-swarm-gui

./: .gitignore  package-lock.json  package.json
src/: App.svelte
src-tauri/: Cargo.toml  swarm_dag.db  tauri.conf.json
src-tauri/src/: crypto.rs  kex.rs  lib.rs  main.rs  network.rs  store.rs  sync.rs
src/routes/: +page.svelte
